rust/codec-markdown/tests/snapshots/mapping__code_chunk.snap
---
source: rust/codec-markdown/tests/mapping.rs
expression: node
---
type: Article
authors:
  - type: AuthorRole
    author:
      type: Person
      givenNames:
        - Alice
    roleName: Writer
  - type: AuthorRole
    author:
      type: Person
      givenNames:
        - Bob
    roleName: Writer
    lastModified:
      type: Timestamp
      value: redacted
      timeUnit: Millisecond
provenance:
  - type: ProvenanceCount
    provenanceCategory: Hw
    characterCount: 11
    characterPercent: 50
  - type: ProvenanceCount
    provenanceCategory: HwHe
    characterCount: 11
    characterPercent: 50
content:
  - type: CodeChunk
    code:
      string: "print('Hello, world!')"
      authorship:
        - - 1
          - 0
          - 0
          - 8
        - - 2
          - 1
          - 2
          - 11
        - - 1
          - 0
          - 0
          - 3
    programmingLanguage: python
    authors:
      - type: AuthorRole
        author:
          type: Person
          givenNames:
            - Alice
        roleName: Writer
      - type: AuthorRole
        author:
          type: Person
          givenNames:
            - Bob
        roleName: Writer
        lastModified:
          type: Timestamp
          value: redacted
          timeUnit: Millisecond
    provenance:
      - type: ProvenanceCount
        provenanceCategory: Hw
        characterCount: 11
        characterPercent: 50
      - type: ProvenanceCount
        provenanceCategory: HwHe
        characterCount: 11
        characterPercent: 50
