rust/codec-markdown/tests/snapshots/mapping__paragraph.snap
---
source: rust/codec-markdown/tests/mapping.rs
expression: node
---
type: Article
authors:
  - type: AuthorRole
    author:
      type: Person
      givenNames:
        - Alice
    roleName: Writer
  - type: AuthorRole
    author:
      type: Person
      givenNames:
        - Bob
    roleName: Writer
    lastModified:
      type: Timestamp
      value: redacted
      timeUnit: Millisecond
provenance:
  - type: ProvenanceCount
    provenanceCategory: Hw
    characterCount: 2
    characterPercent: 15
  - type: ProvenanceCount
    provenanceCategory: HwHe
    characterCount: 11
    characterPercent: 84
content:
  - type: Paragraph
    content:
      - type: Text
        value:
          string: "Hello, world!"
          authorship:
            - - 1
              - 0
              - 0
              - 1
            - - 2
              - 1
              - 2
              - 11
            - - 1
              - 0
              - 0
              - 1
    authors:
      - type: AuthorRole
        author:
          type: Person
          givenNames:
            - Alice
        roleName: Writer
      - type: AuthorRole
        author:
          type: Person
          givenNames:
            - Bob
        roleName: Writer
        lastModified:
          type: Timestamp
          value: redacted
          timeUnit: Millisecond
    provenance:
      - type: ProvenanceCount
        provenanceCategory: Hw
        characterCount: 2
        characterPercent: 15
      - type: ProvenanceCount
        provenanceCategory: HwHe
        characterCount: 11
        characterPercent: 84
